--- a/package.json
+++ b/package.json
@@ -11,14 +11,35 @@
   },
   "devDependencies": {
     "axios": "^0.16.2",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "jquery": "^3.1.1",
+    "cross-env": "^5.1.3",
+    "jquery": "^3.3.1",
     "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "lodash": "^4.17.5",
+    "vue": "^2.5.13"
   },
   "dependencies": {
-    "bulma": "^0.6.1"
-  }
+    "bulma": "^0.6.2",
+    "clipboard": "^1.7.1",
+    "font-awesome": "^4.7.0",
+    "tippy.js": "^2.2.0",
+    "vform": "^0.8.2",
+    "vue-router": "^3.0.1"
+  },
+  "name": "dialoga",
+  "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
+  "version": "1.0.0",
+  "main": "webpack.mix.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/alirezarazavi/dialoga.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/alirezarazavi/dialoga/issues"
+  },
+  "homepage": "https://gitlab.com/alirezarazavi/dialoga#README"
 }
