dialog list with vuejs, have bug

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,119 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.f2f1219445645a488bb1.hot-update.js": "/0.f2f1219445645a488bb1.hot-update.js",
-    "/0.4f082eb525bf6441c3c7.hot-update.js": "/0.4f082eb525bf6441c3c7.hot-update.js",
-    "/0.903c7be89d24f8fc188c.hot-update.js": "/0.903c7be89d24f8fc188c.hot-update.js",
-    "/0.ba983225a402cfc65a7c.hot-update.js": "/0.ba983225a402cfc65a7c.hot-update.js",
-    "/0.96fad515b2949ac353ae.hot-update.js": "/0.96fad515b2949ac353ae.hot-update.js",
-    "/0.5f92540bc2372577937b.hot-update.js": "/0.5f92540bc2372577937b.hot-update.js",
-    "/0.421d9860582da9e93cee.hot-update.js": "/0.421d9860582da9e93cee.hot-update.js",
-    "/0.b536df29163d47328457.hot-update.js": "/0.b536df29163d47328457.hot-update.js",
-    "/0.e5f0c1ef3a0621aa0554.hot-update.js": "/0.e5f0c1ef3a0621aa0554.hot-update.js",
-    "/0.8e5a92de523425eb0856.hot-update.js": "/0.8e5a92de523425eb0856.hot-update.js",
-    "/0.8fff038d27bbfff755c0.hot-update.js": "/0.8fff038d27bbfff755c0.hot-update.js",
-    "/0.124c1a4e5b00a224d41a.hot-update.js": "/0.124c1a4e5b00a224d41a.hot-update.js",
-    "/0.9bc9d920616d01a190c5.hot-update.js": "/0.9bc9d920616d01a190c5.hot-update.js",
-    "/0.7114a2e218d7a21b75e6.hot-update.js": "/0.7114a2e218d7a21b75e6.hot-update.js",
-    "/0.5b401cb42c8f574dd8aa.hot-update.js": "/0.5b401cb42c8f574dd8aa.hot-update.js",
-    "/0.4547df342f32742272ed.hot-update.js": "/0.4547df342f32742272ed.hot-update.js",
-    "/0.134d2609fb461eb1d212.hot-update.js": "/0.134d2609fb461eb1d212.hot-update.js",
-    "/0.94dc91db8aebe022f32e.hot-update.js": "/0.94dc91db8aebe022f32e.hot-update.js",
-    "/0.914fc76b29a03d6a0f3d.hot-update.js": "/0.914fc76b29a03d6a0f3d.hot-update.js",
-    "/0.06ff173cde7317d95872.hot-update.js": "/0.06ff173cde7317d95872.hot-update.js",
-    "/0.826369896d9de2a5078a.hot-update.js": "/0.826369896d9de2a5078a.hot-update.js",
-    "/0.337d571f672aaa424fbc.hot-update.js": "/0.337d571f672aaa424fbc.hot-update.js",
-    "/0.23918871cde64a15e5ea.hot-update.js": "/0.23918871cde64a15e5ea.hot-update.js",
-    "/0.6fe2c25ece40258343b5.hot-update.js": "/0.6fe2c25ece40258343b5.hot-update.js",
-    "/0.2ca85a612c458eb0dcd0.hot-update.js": "/0.2ca85a612c458eb0dcd0.hot-update.js",
-    "/0.52ccaf0ff7417cbb5b16.hot-update.js": "/0.52ccaf0ff7417cbb5b16.hot-update.js",
-    "/0.c0cd1fbdb44f0ecafc2e.hot-update.js": "/0.c0cd1fbdb44f0ecafc2e.hot-update.js",
-    "/0.0acbc0309806e2fd271c.hot-update.js": "/0.0acbc0309806e2fd271c.hot-update.js",
-    "/0.dc3c8bcd53461b82e810.hot-update.js": "/0.dc3c8bcd53461b82e810.hot-update.js",
-    "/0.52ccc1efa3ae417ea1dc.hot-update.js": "/0.52ccc1efa3ae417ea1dc.hot-update.js",
-    "/0.2888bb804316d8a94917.hot-update.js": "/0.2888bb804316d8a94917.hot-update.js",
-    "/0.1d7c9f1ee34ae937fbe3.hot-update.js": "/0.1d7c9f1ee34ae937fbe3.hot-update.js",
-    "/0.61cb50ed707ccfdbac64.hot-update.js": "/0.61cb50ed707ccfdbac64.hot-update.js",
-    "/0.da3cf3f5c41a09643015.hot-update.js": "/0.da3cf3f5c41a09643015.hot-update.js",
-    "/0.8e9cd4c00a9b493a7bbf.hot-update.js": "/0.8e9cd4c00a9b493a7bbf.hot-update.js",
-    "/0.5a64566dc686cbf60057.hot-update.js": "/0.5a64566dc686cbf60057.hot-update.js",
-    "/0.94f51906d33da6688955.hot-update.js": "/0.94f51906d33da6688955.hot-update.js",
-    "/0.6b65e787d85e61a4d256.hot-update.js": "/0.6b65e787d85e61a4d256.hot-update.js",
-    "/0.ec4814d17f11fb99eb4a.hot-update.js": "/0.ec4814d17f11fb99eb4a.hot-update.js",
-    "/0.0e3163a3ca13ae2e27a2.hot-update.js": "/0.0e3163a3ca13ae2e27a2.hot-update.js",
-    "/0.cf93fab05f73c7da0f14.hot-update.js": "/0.cf93fab05f73c7da0f14.hot-update.js",
-    "/0.b8ad60d3371909f0b5ca.hot-update.js": "/0.b8ad60d3371909f0b5ca.hot-update.js",
-    "/0.1df0ae5aa4a4b848a12c.hot-update.js": "/0.1df0ae5aa4a4b848a12c.hot-update.js",
-    "/0.c20732d20c5085e19890.hot-update.js": "/0.c20732d20c5085e19890.hot-update.js",
-    "/0.3c9476c42e593e42590e.hot-update.js": "/0.3c9476c42e593e42590e.hot-update.js",
-    "/0.4acf8230c7c09d7998e4.hot-update.js": "/0.4acf8230c7c09d7998e4.hot-update.js",
-    "/0.14a2bcde14f15101a0aa.hot-update.js": "/0.14a2bcde14f15101a0aa.hot-update.js",
-    "/0.e16f74063283e528040f.hot-update.js": "/0.e16f74063283e528040f.hot-update.js",
-    "/0.59edcdf993f2090af29b.hot-update.js": "/0.59edcdf993f2090af29b.hot-update.js",
-    "/0.c9193db6bcac1c65dce9.hot-update.js": "/0.c9193db6bcac1c65dce9.hot-update.js",
-    "/0.cbfd9bd7e5f8458fd673.hot-update.js": "/0.cbfd9bd7e5f8458fd673.hot-update.js",
-    "/0.894ac9b4914650a63fc0.hot-update.js": "/0.894ac9b4914650a63fc0.hot-update.js",
-    "/0.42fed2220d5ebb27b5b8.hot-update.js": "/0.42fed2220d5ebb27b5b8.hot-update.js",
-    "/0.b7e26962903c086b49a6.hot-update.js": "/0.b7e26962903c086b49a6.hot-update.js",
-    "/0.f7428728f477dfcebcaf.hot-update.js": "/0.f7428728f477dfcebcaf.hot-update.js",
-    "/0.9796a44de0c9bb92589b.hot-update.js": "/0.9796a44de0c9bb92589b.hot-update.js",
-    "/0.4a08429b2c7530c1081c.hot-update.js": "/0.4a08429b2c7530c1081c.hot-update.js",
-    "/0.2ce6a1e7515d3a9d859b.hot-update.js": "/0.2ce6a1e7515d3a9d859b.hot-update.js",
-    "/0.566d95b026cdc0a41136.hot-update.js": "/0.566d95b026cdc0a41136.hot-update.js",
-    "/0.5b44170f9cb7ea82f48f.hot-update.js": "/0.5b44170f9cb7ea82f48f.hot-update.js",
-    "/0.944bdfb082e6b0f6d1a2.hot-update.js": "/0.944bdfb082e6b0f6d1a2.hot-update.js",
-    "/0.3b51d5fab8e5b563a245.hot-update.js": "/0.3b51d5fab8e5b563a245.hot-update.js",
-    "/0.483fba035d4fa8f44d69.hot-update.js": "/0.483fba035d4fa8f44d69.hot-update.js",
-    "/0.1f1717ed8fa4bd179e26.hot-update.js": "/0.1f1717ed8fa4bd179e26.hot-update.js",
-    "/0.a0523c85a115a0cb4d37.hot-update.js": "/0.a0523c85a115a0cb4d37.hot-update.js",
-    "/0.a47fb5b69d971d762f4a.hot-update.js": "/0.a47fb5b69d971d762f4a.hot-update.js",
-    "/0.da8be6cd5871ad5eda7c.hot-update.js": "/0.da8be6cd5871ad5eda7c.hot-update.js",
-    "/0.6b771d045569a5acc87f.hot-update.js": "/0.6b771d045569a5acc87f.hot-update.js",
-    "/0.62d162f3652a265c0eee.hot-update.js": "/0.62d162f3652a265c0eee.hot-update.js",
-    "/0.db9c2d642f6aece35df2.hot-update.js": "/0.db9c2d642f6aece35df2.hot-update.js",
-    "/0.abe8c8fa4ac3b2c8c48a.hot-update.js": "/0.abe8c8fa4ac3b2c8c48a.hot-update.js",
-    "/0.ad6644161e945d25d1a6.hot-update.js": "/0.ad6644161e945d25d1a6.hot-update.js",
-    "/0.4ef0151f8f1bb4be7083.hot-update.js": "/0.4ef0151f8f1bb4be7083.hot-update.js",
-    "/0.b81156328aa0631ef069.hot-update.js": "/0.b81156328aa0631ef069.hot-update.js",
-    "/0.1ee5c362e50debbff746.hot-update.js": "/0.1ee5c362e50debbff746.hot-update.js",
-    "/0.c35971e09861d840cce5.hot-update.js": "/0.c35971e09861d840cce5.hot-update.js",
-    "/0.de496c02568336f3f658.hot-update.js": "/0.de496c02568336f3f658.hot-update.js",
-    "/0.f3cd7afcb6fbcd2f9b54.hot-update.js": "/0.f3cd7afcb6fbcd2f9b54.hot-update.js",
-    "/0.d3dff3d39ebdb7373240.hot-update.js": "/0.d3dff3d39ebdb7373240.hot-update.js",
-    "/0.ccc9a21f7651d5d52aaa.hot-update.js": "/0.ccc9a21f7651d5d52aaa.hot-update.js",
-    "/0.452f3c70c77b574970eb.hot-update.js": "/0.452f3c70c77b574970eb.hot-update.js",
-    "/0.988c026acf1375169165.hot-update.js": "/0.988c026acf1375169165.hot-update.js",
-    "/0.41ce3ed2d77cf76ef689.hot-update.js": "/0.41ce3ed2d77cf76ef689.hot-update.js",
-    "/0.f8ba466c37f26b23134d.hot-update.js": "/0.f8ba466c37f26b23134d.hot-update.js",
-    "/0.78a113ad4b4bdbbcc93d.hot-update.js": "/0.78a113ad4b4bdbbcc93d.hot-update.js",
-    "/0.a131d74aaacd32ecf08d.hot-update.js": "/0.a131d74aaacd32ecf08d.hot-update.js",
-    "/0.3884131176892a5da680.hot-update.js": "/0.3884131176892a5da680.hot-update.js",
-    "/0.762b31cf230ca92f5fe7.hot-update.js": "/0.762b31cf230ca92f5fe7.hot-update.js",
-    "/0.8790e681c09052784678.hot-update.js": "/0.8790e681c09052784678.hot-update.js",
-    "/0.90eb4193dc6976996557.hot-update.js": "/0.90eb4193dc6976996557.hot-update.js",
-    "/0.6d3597df1793dbba8af4.hot-update.js": "/0.6d3597df1793dbba8af4.hot-update.js",
-    "/0.e2ab47f76bf61a6a5f1c.hot-update.js": "/0.e2ab47f76bf61a6a5f1c.hot-update.js",
-    "/0.d2ef42b09662310f2f93.hot-update.js": "/0.d2ef42b09662310f2f93.hot-update.js",
-    "/0.bff0eea168b6662cf0c4.hot-update.js": "/0.bff0eea168b6662cf0c4.hot-update.js",
-    "/0.517e076a6dc62ec64cbf.hot-update.js": "/0.517e076a6dc62ec64cbf.hot-update.js",
-    "/0.5f13cce1d7fedce6306a.hot-update.js": "/0.5f13cce1d7fedce6306a.hot-update.js",
-    "/0.91a78edb4a82f55e9e26.hot-update.js": "/0.91a78edb4a82f55e9e26.hot-update.js",
-    "/0.4893a5ef3dbe7fd672a0.hot-update.js": "/0.4893a5ef3dbe7fd672a0.hot-update.js",
-    "/0.9d149b40398c6f8d7549.hot-update.js": "/0.9d149b40398c6f8d7549.hot-update.js",
-    "/0.a701f84ceaea785bfd9a.hot-update.js": "/0.a701f84ceaea785bfd9a.hot-update.js",
-    "/0.fb5e27085141dc2ab1c7.hot-update.js": "/0.fb5e27085141dc2ab1c7.hot-update.js",
-    "/0.0e09909498703be91241.hot-update.js": "/0.0e09909498703be91241.hot-update.js",
-    "/0.f206ba6c73101fbe4303.hot-update.js": "/0.f206ba6c73101fbe4303.hot-update.js",
-    "/0.03a4996987032801a98f.hot-update.js": "/0.03a4996987032801a98f.hot-update.js",
-    "/0.f49bdd5347df67fb5e16.hot-update.js": "/0.f49bdd5347df67fb5e16.hot-update.js",
-    "/0.3dcd844509672a1e1fe4.hot-update.js": "/0.3dcd844509672a1e1fe4.hot-update.js",
-    "/0.31f3f62c23caf860737a.hot-update.js": "/0.31f3f62c23caf860737a.hot-update.js",
-    "/0.0fbfb12ce2f9b9516e2f.hot-update.js": "/0.0fbfb12ce2f9b9516e2f.hot-update.js",
-    "/0.f1f64f797ebe1549bdf9.hot-update.js": "/0.f1f64f797ebe1549bdf9.hot-update.js",
-    "/0.2bda2e16df2273f3a66d.hot-update.js": "/0.2bda2e16df2273f3a66d.hot-update.js",
-    "/0.00393cf8f3b05d1574d3.hot-update.js": "/0.00393cf8f3b05d1574d3.hot-update.js",
-    "/0.5337b28c901d7ab8c9f5.hot-update.js": "/0.5337b28c901d7ab8c9f5.hot-update.js",
-    "/0.76b4e62645079fa9609e.hot-update.js": "/0.76b4e62645079fa9609e.hot-update.js",
-    "/0.3f8cb59398207c8f7493.hot-update.js": "/0.3f8cb59398207c8f7493.hot-update.js",
-    "/0.587fc869828a96717368.hot-update.js": "/0.587fc869828a96717368.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
