--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bulma": "^0.6.2",
     "clipboard": "^1.7.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.20.1",
+    "moment-jalaali": "^0.7.2",
     "tippy.js": "^2.2.0",
     "vform": "^0.8.2",
     "vue-router": "^3.0.1"
