ability to like dialog

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,71 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.58df07a15f246abf2505.hot-update.js": "/0.58df07a15f246abf2505.hot-update.js",
+    "/0.7b3b10075428e8248c45.hot-update.js": "/0.7b3b10075428e8248c45.hot-update.js",
+    "/0.868dc56c8b2926594e87.hot-update.js": "/0.868dc56c8b2926594e87.hot-update.js",
+    "/0.f923fc381542994d49f2.hot-update.js": "/0.f923fc381542994d49f2.hot-update.js",
+    "/0.e9331c00f9c2a885d7a1.hot-update.js": "/0.e9331c00f9c2a885d7a1.hot-update.js",
+    "/0.c3b1e51025d2e63bc57e.hot-update.js": "/0.c3b1e51025d2e63bc57e.hot-update.js",
+    "/0.7f39ede650dcf5024aa3.hot-update.js": "/0.7f39ede650dcf5024aa3.hot-update.js",
+    "/0.5851696568181e0db1b1.hot-update.js": "/0.5851696568181e0db1b1.hot-update.js",
+    "/0.6b9d0a63f8288a2dfce4.hot-update.js": "/0.6b9d0a63f8288a2dfce4.hot-update.js",
+    "/0.ede6086999503b7e2848.hot-update.js": "/0.ede6086999503b7e2848.hot-update.js",
+    "/0.827519428d3998c8b991.hot-update.js": "/0.827519428d3998c8b991.hot-update.js",
+    "/0.530c750a5b1dc9cf76ca.hot-update.js": "/0.530c750a5b1dc9cf76ca.hot-update.js",
+    "/0.0a287da8bde6513c66a8.hot-update.js": "/0.0a287da8bde6513c66a8.hot-update.js",
+    "/0.2ec523d612307a3153c4.hot-update.js": "/0.2ec523d612307a3153c4.hot-update.js",
+    "/0.d92ceb597acd39e38e7b.hot-update.js": "/0.d92ceb597acd39e38e7b.hot-update.js",
+    "/0.364b26121a13b605410c.hot-update.js": "/0.364b26121a13b605410c.hot-update.js",
+    "/0.1b37ebbe143b4d0e1969.hot-update.js": "/0.1b37ebbe143b4d0e1969.hot-update.js",
+    "/0.e812e1881402a1a17881.hot-update.js": "/0.e812e1881402a1a17881.hot-update.js",
+    "/0.c293fa3059f878061f05.hot-update.js": "/0.c293fa3059f878061f05.hot-update.js",
+    "/0.c530af3c0b543ad62f3b.hot-update.js": "/0.c530af3c0b543ad62f3b.hot-update.js",
+    "/0.ab34cfa464b34583efc3.hot-update.js": "/0.ab34cfa464b34583efc3.hot-update.js",
+    "/0.afebbd84d13a1e7055ec.hot-update.js": "/0.afebbd84d13a1e7055ec.hot-update.js",
+    "/0.5edbc90f7b61cdc44671.hot-update.js": "/0.5edbc90f7b61cdc44671.hot-update.js",
+    "/0.ef02ed332630f58fff91.hot-update.js": "/0.ef02ed332630f58fff91.hot-update.js",
+    "/0.034b8712b3ac9a45cbfa.hot-update.js": "/0.034b8712b3ac9a45cbfa.hot-update.js",
+    "/0.c565ea4cc5a03d61bdab.hot-update.js": "/0.c565ea4cc5a03d61bdab.hot-update.js",
+    "/0.58fde31889809f5450fb.hot-update.js": "/0.58fde31889809f5450fb.hot-update.js",
+    "/0.8707834f57a442468800.hot-update.js": "/0.8707834f57a442468800.hot-update.js",
+    "/0.f70f6cce6753689b274c.hot-update.js": "/0.f70f6cce6753689b274c.hot-update.js",
+    "/0.2a69b28a6be5b5ba3552.hot-update.js": "/0.2a69b28a6be5b5ba3552.hot-update.js",
+    "/0.72fa08390d2f746e7d70.hot-update.js": "/0.72fa08390d2f746e7d70.hot-update.js",
+    "/0.74193a25aa4e4cec0b1b.hot-update.js": "/0.74193a25aa4e4cec0b1b.hot-update.js",
+    "/0.67009f348081bd7a65a2.hot-update.js": "/0.67009f348081bd7a65a2.hot-update.js",
+    "/0.86d6cd5954f809fdccfd.hot-update.js": "/0.86d6cd5954f809fdccfd.hot-update.js",
+    "/0.5dd56abbbe4631a8bbd5.hot-update.js": "/0.5dd56abbbe4631a8bbd5.hot-update.js",
+    "/0.402284163c8609db4a62.hot-update.js": "/0.402284163c8609db4a62.hot-update.js",
+    "/0.68ba89a0caf48164492c.hot-update.js": "/0.68ba89a0caf48164492c.hot-update.js",
+    "/0.e4341d60c58fd3a1c9f2.hot-update.js": "/0.e4341d60c58fd3a1c9f2.hot-update.js",
+    "/0.d2b2f7bb59d0afca1a56.hot-update.js": "/0.d2b2f7bb59d0afca1a56.hot-update.js",
+    "/0.78ba8266d27b0fb6dd60.hot-update.js": "/0.78ba8266d27b0fb6dd60.hot-update.js",
+    "/0.d74d08a9aea4d57345f3.hot-update.js": "/0.d74d08a9aea4d57345f3.hot-update.js",
+    "/0.bfffe8c5334013c7b795.hot-update.js": "/0.bfffe8c5334013c7b795.hot-update.js",
+    "/0.eaaad8f56bc23dbe6242.hot-update.js": "/0.eaaad8f56bc23dbe6242.hot-update.js",
+    "/0.cc5cc39a8cfb3bbde65d.hot-update.js": "/0.cc5cc39a8cfb3bbde65d.hot-update.js",
+    "/0.1c4d1d5b507a78ccdf25.hot-update.js": "/0.1c4d1d5b507a78ccdf25.hot-update.js",
+    "/0.51f4117bddad84bc2401.hot-update.js": "/0.51f4117bddad84bc2401.hot-update.js",
+    "/0.e332524e2316db1a4a48.hot-update.js": "/0.e332524e2316db1a4a48.hot-update.js",
+    "/0.c125f05f8496861bf3fc.hot-update.js": "/0.c125f05f8496861bf3fc.hot-update.js",
+    "/0.e58015142cb15274bde8.hot-update.js": "/0.e58015142cb15274bde8.hot-update.js",
+    "/0.6d83d9f6232d62bc9168.hot-update.js": "/0.6d83d9f6232d62bc9168.hot-update.js",
+    "/0.a246e3ba9314980ce0ea.hot-update.js": "/0.a246e3ba9314980ce0ea.hot-update.js",
+    "/0.3de8510e129a4f6d955a.hot-update.js": "/0.3de8510e129a4f6d955a.hot-update.js",
+    "/0.6ad716e0f5d01f50ca0b.hot-update.js": "/0.6ad716e0f5d01f50ca0b.hot-update.js",
+    "/0.10b3e7a722db3f4d7ac2.hot-update.js": "/0.10b3e7a722db3f4d7ac2.hot-update.js",
+    "/0.1b5d5fe0440da2a87f6f.hot-update.js": "/0.1b5d5fe0440da2a87f6f.hot-update.js",
+    "/0.d004fd6358ac8d6cd5ba.hot-update.js": "/0.d004fd6358ac8d6cd5ba.hot-update.js",
+    "/0.cd4f3ebe0857089131cd.hot-update.js": "/0.cd4f3ebe0857089131cd.hot-update.js",
+    "/0.ad93a242c0dbfdc98eb4.hot-update.js": "/0.ad93a242c0dbfdc98eb4.hot-update.js",
+    "/0.fded04e4a5829ee9fbd2.hot-update.js": "/0.fded04e4a5829ee9fbd2.hot-update.js",
+    "/0.fdc5afd46d79f697487b.hot-update.js": "/0.fdc5afd46d79f697487b.hot-update.js",
+    "/0.895726325ea0cf99ce5e.hot-update.js": "/0.895726325ea0cf99ce5e.hot-update.js",
+    "/0.1e912507a2e4502da7ca.hot-update.js": "/0.1e912507a2e4502da7ca.hot-update.js",
+    "/0.a9309f2e17444fdb1f6a.hot-update.js": "/0.a9309f2e17444fdb1f6a.hot-update.js",
+    "/0.a7c073725d2763b3ceb0.hot-update.js": "/0.a7c073725d2763b3ceb0.hot-update.js",
+    "/0.2c64a5ff55bf6536e796.hot-update.js": "/0.2c64a5ff55bf6536e796.hot-update.js",
+    "/0.c342d4cc5c869c2cc84a.hot-update.js": "/0.c342d4cc5c869c2cc84a.hot-update.js",
+    "/0.0fa07212bb6f046b5db0.hot-update.js": "/0.0fa07212bb6f046b5db0.hot-update.js"
 }
