--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.13"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "bulma": "^0.6.2",
     "clipboard": "^1.7.1",
     "font-awesome": "^4.7.0",
