--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "aharen/omdbapi": "^2.0",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "fideloper/proxy": "~4.0",
+        "hekmatinasser/verta": "^1.8",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "fideloper/proxy": "~4.0",
-        "barryvdh/laravel-ide-helper": "^2.4",
-        "aharen/omdbapi": "^2.0",
-        "hekmatinasser/verta": "^1.8",
-        "intervention/image": "^2.4"
+        "tymon/jwt-auth": "1.0.0-rc.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
