--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,29 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "aharen/omdbapi": "^2.0",
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "php": "^7.3|^8.0",
+        "aharen/omdbapi": "^2.1.0",
         "fideloper/proxy": "~4.0",
-        "hekmatinasser/verta": "^1.8",
-        "intervention/image": "^2.4",
-        "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "1.0.0-rc.3"
+        "hekmatinasser/verta": "^1.12.4",
+        "intervention/image": "^2.7.1",
+        "laravel/framework": "^8.54",
+        "laravel/tinker": "^2.5",
+        "tymon/jwt-auth": "^1.0.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "laravel/dusk": "^3.0",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~7.0"
+        "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^6.19.2",
+        "mockery/mockery": "^1.4.2",
+        "phpunit/phpunit": "~9.3.3",
+        "laravel/ui": "^3.4.1"
     },
     "autoload": {
         "classmap": [
